<resources>
    <string name="app_name">YOGIFY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_motivate_you">What motivate you</string>
    <string name="CustomCategoryName">view</string>
    <string name="CalenderRecyclerViewDayName">M</string>
    <string name="Date">12</string>
    <string name="beginner">Beginner</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="start">Start</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="next">Next</string>
    <string name="ExerciseDifficultyLevel">Difficulty level</string>
    <string name="AppName">Yogify</string>
    <string name="login_to_your_account">Login to your Account</string>

    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">signup</string>
    <string name="create_your_account">Create your Account</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account">have an account?</string>
    <string name="signIn">SignIn</string>
    <string name="your_path_to_a_healthier_you">Your Path to a Healthier You</string>
    <string name="OnBoardingScreen1Description">Experience the benefits of regular yoga practice: increased flexibility, improved strength, reduced stress, and a clearer mind.Start your journey today!</string>
    <string name="discover_your_inner_peace">Discover Your Inner Peace</string>
    <string name="OnBoardingScreen3Description">Embark on a journey of self-discovery and well being eith our yoga app.Find your balance ,reduce stress and and improve the overall health.</string>
    <string name="yoga_for_every_body">Yoga for Every Body</string>
    <string name="OnBoardingScreen2Description">Our app offers wide range of yoga classes tailored to your fitness and goals. Whether you\'re a beginner or an experienced yogi,we have somethng for you</string>
    <string name="full_name">Full name</string>
    <string name="_5_4">5\'4\'</string>
    <string name="_60kg">60kg\'</string>
    <string name="email">Email@gamil.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="theme">Theme</string>
    <string name="log_out">Log out</string>
    <string name="focusing_area">Focusing Area</string>
    <string name="full_body">Full Body</string>
    <string name="arm">Arm</string>
    <string name="legs">Legs</string>
    <string name="chest">Chest</string>
    <string name="spine">Spine</string>
    <string name="flexibility_text">Flexibility Text</string>
    <string name="can_you_touch_your_feet">Can you touch your feet.</string>
    <string name="yes_i_can">Yes | I can</string>
    <string name="no_i_can_t">No | I can\'t</string>
    <string name="enter_detailed">Enter Detailed</string>
    <string name="stay_young">Stay Young</string>
    <string name="lose_weight">Lose weight</string>
    <string name="get_shaped">Get\n shaped</string>
    <string name="improve_health">Improve\n health</string>
    <string name="boost_energy">Boost energy</string>
    <string name="sleep_better">Sleep better</string>
    <string name="reduce_stress">Reduce stress</string>
    <string name="verify_your_identity">Verify your Identity</string>
    <string name="VerificationDescription">Enter the verification code that sent to your mobile</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="logout">Logout</string>
    <string name="category">Category</string>
    <string name="exercise">Exercise</string>
    <string name="delete_alert">Are you sure you want to Delete ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="select_level">Select Level</string>
</resources>