<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground"
    tools:context=".setupScreens.SetupScreen2">


        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alignmentMode="alignMargins"
                    android:columnCount="2"
                    android:rowCount="3">

                    <RadioButton
                        android:id="@+id/rb1"
                        style="@style/checkbox_button"
                        android:drawableTop="@drawable/gymnast_with_strong_muscles_in_full_body_view_svgrepo_com"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/full_body" />

                    <RadioButton
                        android:id="@+id/rb2"
                        style="@style/checkbox_button"
                        android:drawableTop="@drawable/muscle"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/arm" />

                    <RadioButton
                        android:id="@+id/rb3"
                        style="@style/checkbox_button"
                        android:drawableTop="@drawable/leg"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/legs" />


                    <RadioButton
                        android:id="@+id/rb4"
                        style="@style/checkbox_button"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:drawableTop="@drawable/man"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/chest" />

                    <RadioButton
                        android:id="@+id/rb5"
                        style="@style/checkbox_button"
                        android:drawableTop="@drawable/human"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/spine" />
                </GridLayout>

            </RadioGroup>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"
                style="@style/loginBtn"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall"
                android:enabled="false"
                android:text="@string/next"
                 />


        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>