<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="categoriesModel"
            type="com.pardeep.yogify.admin.fragments.ExerciseListModel" />
        <import type="android.view.View"/>
        <import type="com.pardeep.yogify.admin.ClickType"/>

        <variable
            name="position"
            type="Integer" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_grey"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvaddtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{position >-1? @string/update: @string/add}"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imgAdd"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher_background"
        android:textSize="30dp"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilitemName"
        android:hint="Exercise Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtitems"
            android:text="@{categoriesModel.exrName}"
            android:inputType="textPersonName|textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilDes"
        android:hint="Description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtDes"
            android:text="@{categoriesModel.description}"
            android:inputType="textMultiLine|textPersonName|textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilDuration"
        android:hint="Duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtDuration"
            android:text="@{categoriesModel.duration}"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/select_level"/>
        <RadioGroup
            android:id="@+id/rdGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginner"/>
               <RadioButton
                   android:id="@+id/intermediate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intermediate"/>
               <RadioButton
                   android:id="@+id/advanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced"/>

        </RadioGroup>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnsave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginVertical="5dp"
        />

    </LinearLayout>
        <ProgressBar
            android:id="@+id/pbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

</layout>