<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreenBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login_signup_screen.Verification_Screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/verify_your_identity"
            android:textSize="30sp" />


        <TextView
            style="@style/descriptionColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:gravity="center"
            android:text="@string/VerificationDescription"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="18sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="232dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="10dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/verification_animation" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout1"
                style="@style/textInputEditBackground"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginVertical="25dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/lightGreen"
                app:boxStrokeColor="@color/lightGreen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_code_1"
                    style="@style/EditTextInputBoxcolor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout2"
                style="@style/textInputEditBackground"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginVertical="25dp"
                android:layout_marginEnd="10dp"
                app:boxStrokeColor="@color/lightGreen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_code_2"
                    style="@style/EditTextInputBoxcolor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout3"
                style="@style/textInputEditBackground"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginVertical="25dp"
                android:layout_marginEnd="10dp"
                app:boxStrokeColor="@color/lightGreen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_code_3"
                    style="@style/EditTextInputBoxcolor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout4"
                style="@style/textInputEditBackground"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginVertical="25dp"
                android:layout_marginEnd="10dp"
                app:boxStrokeColor="@color/lightGreen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_code_4"
                    style="@style/EditTextInputBoxcolor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TextInputLayout5"
                style="@style/textInputEditBackground"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginVertical="25dp"
                android:layout_marginEnd="10dp"
                app:boxStrokeColor="@color/lightGreen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_code_5"
                    style="@style/EditTextInputBoxcolor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="1"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="60dp"
                android:text="@string/resend_code"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/verifyBtn"
                style="@style/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="38dp"
                android:text="@string/verify_code"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall" />


        </LinearLayout>


    </LinearLayout>

</FrameLayout>